Content center alignment fix

--- a/src/sass/main.styl
+++ b/src/sass/main.styl
@@ -67,6 +67,8 @@ body
     right 0
     bottom 0
     display flex    
+    justify-content center
+    align-items center
     opacity 0
     transform scale(0)
     transition .5s ease .1s
@@ -75,8 +77,7 @@ body
         transform scale(1)
     }
 
-.device-vw
-    margin auto
+.device-vw    
     text-align center
     .dimensions 
         display block
